--- a/_config.yml
+++ b/_config.yml
@@ -114,8 +114,8 @@ recommend:
 
 # Configure website favicon and LOGO
 # 配置网站favicon和网站LOGO
-favicon: /favicon.png
-logo: /medias/logo.png
+favicon: https://raw.githubusercontent.com/JokerLJZ/Image/master/logo.png
+logo: https://raw.githubusercontent.com/JokerLJZ/Image/master/logo.png
 
 # The configuration of the second button in the home banner,
 # including the display name of the button, the font awesome icon, and the hyperlink to the button.
@@ -160,8 +160,8 @@ code:
 reward:
   enable: true
   title: 你的赏识是我前进的动力
-  wechat: /medias/reward/wechat.jpg
-  alipay: /medias/reward/alipay.jpg
+  wechat: https://raw.githubusercontent.com/JokerLJZ/Image/master/wechat.jpg
+  alipay: https://raw.githubusercontent.com/JokerLJZ/Image/master/alipay.jpg
 
 # Whether to activate the copyright information of the blog and author when copying the post content.
 # minCharNumber: Approve copyright information by copying at least how many characters.
@@ -201,7 +201,7 @@ clicklove:
 # profile in about page, including avatars, career, and personal introductions.
 # 在”关于”页面中配置个人信息，包括头像、职业和个人介绍.
 profile:
-  avatar: /medias/avatar.jpg
+  avatar: https://raw.githubusercontent.com/JokerLJZ/Image/master/avatar.jpg
   career: Project Manager with coding skill
   introduction: 欢迎来到火柴人的Blog
 
@@ -248,9 +248,9 @@ mySkills:
 myGallery:
   enable: true
   data:
-    - /medias/featureimages/0.jpg
-    - /medias/featureimages/1.jpg
-    - /medias/featureimages/2.jpg
+    - https://raw.githubusercontent.com/JokerLJZ/Image/master/路人女主-1.jpg
+    - https://raw.githubusercontent.com/JokerLJZ/Image/master/haruhi_suzumiya_characters_anime_main_characters_93225_1920x1200.jpg
+    - https://raw.githubusercontent.com/JokerLJZ/Image/master/k-on_girl_many_different_style_87217_1920x1200.jpg
 
 # Whether to display post-calender in the `archive` page
 # 设置在归档页面中是否显示'文章日历'控件
@@ -385,30 +385,30 @@ libs:
 # The post featured images that needs to be displayed when there is no image.
 # 无文章特色图片时需要显示的文章特色图片.
 featureImages:
-- /medias/featureimages/0.jpg
-- /medias/featureimages/1.jpg
-- /medias/featureimages/2.jpg
-- /medias/featureimages/3.jpg
-- /medias/featureimages/4.jpg
-- /medias/featureimages/5.jpg
-- /medias/featureimages/6.jpg
-- /medias/featureimages/7.jpg
-- /medias/featureimages/8.jpg
-- /medias/featureimages/9.jpg
-- /medias/featureimages/10.jpg
-- /medias/featureimages/11.jpg
-- /medias/featureimages/12.jpg
-- /medias/featureimages/13.jpg
-- /medias/featureimages/14.jpg
-- /medias/featureimages/15.jpg
-- /medias/featureimages/16.jpg
-- /medias/featureimages/17.jpg
-- /medias/featureimages/18.jpg
-- /medias/featureimages/19.jpg
-- /medias/featureimages/20.jpg
-- /medias/featureimages/21.jpg
-- /medias/featureimages/22.jpg
-- /medias/featureimages/23.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/0.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/1.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/2.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/3.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/4.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/5.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/6.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/7.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/8.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/9.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/10.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/11.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/12.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/13.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/14.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/15.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/16.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/17.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/18.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/19.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/20.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/21.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/22.jpg
+- https://raw.githubusercontent.com/JokerLJZ/Image/master/23.jpg
 
 # default configs that the default policy for every articles/posts
 # default 配置文章的默认转载规则
