开启音乐自动播放

--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ music:
   type: playlist	#require song, playlist, album, search, artist
   id: 7441328554 #503838841     #require	song id / playlist id / album id / search keyword
   fixed: true       # 开启吸底模式
-  autoplay: false   # 是否自动播放
+  autoplay: true # 是否自动播放
   theme: '#42b983'
   loop: 'all'       # 音频循环播放, 可选值: 'all', 'one', 'none'
   order: 'random'   # 音频循环顺序, 可选值: 'list', 'random'
@@ -440,7 +440,7 @@ daovoice:
 
 # Tidio online contact
 tidio:
-  enable: true
+  enable: false
   public_key: barvq1d5n4djkzy3mbcvzbwshpsifwyo
 
 #背景canvas-nest
